Fixed path - added render links
